[project]
authors = [
{name = "Geoff Hutchison", email = "geoff.hutchison@gmail.com"},
{name = "Logan Ward", email = "lward@anl.gov" },
]
name = "bouquet-mol"
requires-python = ">= 3.11"
version = "0.5.0"
description = 'Molecular conformer optimization via Bayesian optimization'
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "chemistry",
    "conformers",
    "bayesian-optimization",
    "molecular-modeling",
    "computational-chemistry",
    "rdkit",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Operating System :: OS Independent",
]
dependencies = [
    "rdkit",
    "networkx",
    "torch",
    "gpytorch",
    "botorch",
    "ase>=3.23",  # ABC-FIRE (FIRE2 use_abc) added in 3.23
]

[project.optional-dependencies]
ani = ["torchani"]
all = ["torchani"]
test = ["pytest>=9.0", "pytest-cov>=7.0"]
# Rotation/permutation-invariant RMSD for ensemble dedup. Optional because it
# only ships wheels for some platforms (macOS 15+ arm64, manylinux x86_64; no
# Windows). solver.py falls back to a Kabsch RMSD when it is not installed.
irmsd = ["irmsd>=0.1.1"]

[project.urls]
Homepage = "https://github.com/ghutchis/bouquet"
Repository = "https://github.com/ghutchis/bouquet"
Issues = "https://github.com/ghutchis/bouquet/issues"

[project.scripts]
bouquet = "bouquet.cli:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["bouquet"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "linux-aarch64", "osx-64", "osx-arm64"]

[tool.pixi.dependencies]
tblite = "*"
xtb-python = "*"
psi4 = "*"
gcp-correction = "*"
pytest = ">=9.0.2,<10"
pytest-cov = ">=7.0.0,<8"
python = "==3.12"
pandas = ">=3.0.3,<4"

# Install bouquet itself editably (the pixi equivalent of `pip install -e .`) so
# `import bouquet` and scripts/ resolve without setting PYTHONPATH. The key must
# match the local [project].name, not the PyPI distribution name.
[tool.pixi.pypi-dependencies]
bouquet = { path = ".", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (run with --slow to include)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["bouquet"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
